len/src/snapshots/len__lexer__tests__string.snap
---
source: src/lexer.rs
expression: "(input.0, input.1, p.parse(input.1))"
---
(
    "string",
    " \"foo\" \"bar\" ",
    ParseResult {
        output: Some(
            [
                Token {
                    kind: String(
                        "foo",
                    ),
                    span: 1..7,
                },
                Token {
                    kind: String(
                        "bar",
                    ),
                    span: 7..13,
                },
            ],
        ),
        errs: [],
    },
)
